--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
     padding: 0; margin: 0;
     font-size: 22px;
     line-height: 150%;
-    background: rgb(82,30,20);
-    background: linear-gradient(0deg, rgb(124, 56, 25) 0%, rgba(235,168,126,1) 100%) repeat fixed center / cover;     
+    background: #FFFEF1;
+    /* background: linear-gradient(0deg, rgb(124, 56, 25) 0%, rgba(235,168,126,1) 100%) repeat fixed center / cover;      */
 }
 
 h1, h2 { margin: 0; }
